--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+            <img src="./img/instagram-celular.png" alt="imagem de um celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="./img/instagram-logo.png" class="instagram-logo" alt="logo do instagram">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="./img/perfil-instagram.jpg" alt="foto do perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
+                <a href="#" class="instagram-login">Continue como carlosvjs</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Não é carlosvjs</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
-                    <span class="link-blue">Inscreva-se</span>
+                    <span class="link-blue">Inscreva-se</span>      
                 </p>
             </div>
             <div class="get-the-app">
